<resources>
    <string name="app_name">LiveRates</string>
    <string name="folder_name_files">Files</string>
    <string name="io_failure">I/O Error!!</string>
    <string name="Byte">Bytes</string>
    <string name="kilobytes">KB</string>
    <string name="megabytes">MB</string>
    <string name="gigabytes">GB</string>
    <string name="file_not_found">No such file or directory</string>
    <string name="expense_tracker_home_title">Your Expenses In A Nutshell</string>
    <string name="content_des_menu_item_icon">home_menu_item_icon</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="live_exchange_rates">Live Exchange Rates</string>
    <string name="bank_rates">Bank Rates</string>
    <string name="other_rates">Other Rates</string>
    <string name="tools">Tools</string>
    <string name="calculators">Rate &amp; Tax Calculators</string>
    <string name="home_expense_tracker_pie_char_description">Your expenses this month by category</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="expense_tracker_home_notice">Tracking Your Spending Has Never Been This Easy!</string>
    <string name="spending_today">Today</string>
    <string name="spending_last_7_days">Last 7 days</string>
    <string name="spending_last_month">This Month</string>
    <string name="your_budget">Your Budget</string>
    <string name="deficit">Deficit</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_rates_available">Connect To The Internet To Get The Latest Rates</string>
    <string name="question_marks">\???</string>
    <string name="exchange_rate_calculator">Exchange Rate Calculator</string>
    <string name="exchange_rate_calc_description">Easily inter convert every currency (including Bitcoin) based on the latest rates.</string>
    <string name="interest_calc">Interest Rate Calculator</string>
    <string name="interest_calc_des">Easily calculate the amount your savings or treasury bills will accrue or even how much you will pay as interest for your loan.</string>
    <string name="tax_calc">Vat and Income Tax Calculator</string>
    <string name="tax_calc_des">VAT and Income Tax calculation made straight-forward!. Do it using the latest rates from Ghana Revenue Authority.</string>
    <string name="preparing_zealous_notice">Preparing for first use……</string>
    <string name="content_descrip_currency_icon">Currency Icon</string>
    <string name="rate_template" formatted="false">%s %s -> %s %s</string>
    <string name="search">Search</string>
    <string name="hint_search">Search…</string>
    <string name="arrow">Arrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="_7_days_ago">7 days ago</string>
    <string name="_28_days_ago">28 days ago</string>
    <string name="back">Back</string>
    <string name="today_title">%s</string>
    <string name="missing">\?\?</string>
    <string name="historical_rates_title">Rates This Year</string>
    <string name="select_currency">Selected Currency</string>
    <string name="last_updated_never">never</string>
    <string name="now">now</string>
    <string name="base">1.00</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="interest_rate_calculator">Interest Calculator</string>
    <string name="principal">Principal</string>
    <string name="rate_percent">rate %</string>
    <string name="tv_duration_label">Duration</string>
    <string name="interest">Interest</string>
    <string name="amount">Total</string>
    <string name="your_bank_s_terms_and_conditions_might_affect_this_value">Note: your bank\'s terms and condition may affect final interest</string>
    <string name="title_today">Today %s</string>
    <string name="interest_amount">Interest\n\n%s</string>
    <string name="error_rate_exceeds_100">Rate cannot exceed 100</string>
    <string name="amount_value">Amount\n\n%s</string>
    <string name="no_currency_selected">No currency to selected</string>
    <string name="drop_down_icon">Drop down icon</string>
    <string name="calendar">Calendar</string>
    <string name="go_back">Go back</string>
    <string name="gse">Ghana Stock Exchange</string>
    <string name="news">Stocks</string>
    <string name="expenses">Expenses</string>
    <string name="live_rates">Exchange Rates</string>
    <string name="category">Category</string>
    <string name="amount_format">- $%s</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="total_budget">Total Budget\nGH₵%s</string>
    <string name="total_expenditire">Total Expenditure\nGH₵%s</string>
    <string name="assistant">Assistant</string>
    <string name="view_budget">View Budget</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="unknown">Unknown</string>
    <string name="add_expenditure">Add Expenditure</string>
    <string name="no_description">No description</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="no_category_error">No category selected</string>
    <string name="error">Error!!</string>
    <string name="category_icon">Category Icon</string>
    <string name="_0_00">0.00</string>
    <string name="add_new_category">Add New Category</string>
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string name="add_category">Add Category</string>
    <string name="name_too_short">Name too short</string>
    <string name="no_budget_warning">No budget set, are you sure you want to continue?</string>
    <string name="attach_file">Attach</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="choose_date">Choose Date</string>
    <string name="date_in_future">Date is in the future</string>
    <string name="unspecified_location">Location unspecified</string>
    <string name="no_location_provided">No location provided</string>
    <string name="enter_location">Enter location</string>
    <string name="category_already_attached">This category is associated with some expenditures and can\'t be removed</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="expenditure_removed_success">Expenditure removed successfully</string>
    <string name="budget_amount_template" formatted="false">GH₵%s  %s</string>
    <string name="spent">Spent: GH₵%s</string>
    <string name="left">Left: GH₵%s</string>
    <string name="budget_deficit">Deficit: GH₵%s</string>
    <string name="path_not_found">%s does not exist</string>
    <string name="too_many_attachments">Can\'t attach more than 5 attachments</string>
    <string name="attachment_too_large">Attachment cannot be larger than 5MB</string>
    <string name="save_error">Unknown error while saving expenditure</string>
    <string name="saving_expnditure">Saving expenditure</string>
    <string name="attachment_preview">Attachment Preview</string>
    <string name="loading">Loading</string>
    <string name="attachments">Attachments (%d)</string>
    <string name="no_app_for_viewing_pdf_files">No app for viewing pdf files</string>
    <string name="add_location">Add location</string>
    <string name="loading_news_feeds">Loading news feed</string>
    <string name="feed_thumbnail">Feed thumbnail</string>
    <string name="share">Share</string>
    <string name="bookmark">bookmark</string>
    <string name="no_browser">No browser is installed on this device</string>
    <string name="no_sharing_app">No app sharing content installed</string>
    <string name="bookmark_success">Added to favorite items</string>
    <string name="bookmark_removed_succss">Item removed from favorites</string>
    <string name="no_news">Failed to fetch news from the internet</string>
    <string name="try_again">Try again</string>
    <string name="no_favorites">Your favorites list is empty</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="follow_link">Follow this link to read more</string>
    <string name="attachment_title">Attachment %d</string>
    <string name="duplicate_attachment">This file is already attached</string>
    <string name="stale_rates">Stale rates, connect to the internet to get latest rates</string>
    <string name="no_expenses">No Expenses</string>
    <string name="view_full_details">View more details</string>
    <string name="app_icon">App Icon</string>
    <string name="delete_warning">Are you sure you want to delete this entry?</string>
    <string name="sale_rates_notice">Stale rates!!! connect to refresh</string>
    <string name="connect_get_rates_notice">Connect to get latest rates</string>
    <string name="failed_to_delete">Failed to delete entry</string>
    <string name="failed_to_add_category">Failed to add category</string>
    <string name="failed_to_add_favorite">Unknown error while trying to add to favorites</string>
    <string name="restore_data">Connect Your Google Account To Backup Your Data Safely In The Cloud</string>
    <string name="restore_from_drive">Google Drive</string>
    <string name="notice_gdrive">Requires a google account</string>
    <string name="local_backup">Local Backup</string>
    <string name="checking_play_services_avaibility">Checking play services availability</string>
    <string name="connection_failed">Connection failed</string>
    <string name="gdrive_success">Google drive backup setup successful</string>
    <string name="g_drive_seup_failed">Failed to set up cloud backup</string>
    <string name="please_wait">Please Wait</string>
    <string name="skip">Skip</string>
    <string name="setup_backup">Setup Cloud Backup</string>
    <string name="play_services_not_available">Play services not available</string>
    <string name="error_unknown">Unknown error</string>
    <string name="preparing_restore">Preparing to restore backup</string>
    <string name="backup_details" formatted="false">Last Backup: %s\nBackup size %s</string>
    <string name="restoring_backup_progress" formatted="false">Restoring backup… %s/%s</string>
    <string name="backup_failed_notice">Restore failed: %s</string>
    <string name="connect_account">Connect Account</string>
    <string name="restore_success">Restore Completed Successfully</string>
    <string name="request_local_backup">There\'s a local backup available, Would like to restore that instead?</string>
    <string name="error_backup_restore">An unknown error occured</string>
    <string name="cannot_restore_backup">Restore can\'t be stopped</string>
    <string name="overview">Overview</string>
    <string name="extra_info">Extra Information</string>
    <string name="add_to_watching_list">Add to watching list</string>
    <string name="watching">Watching</string>
    <string name="all_equities">Market</string>
    <string name="show_on_home_screen">Show on home screen</string>
    <string name="all_rates">All rates</string>
    <string name="input">Input</string>
    <string name="cedis">Cedis</string>
    <string name="popular_currencies">Popular Currencies</string>
    <string name="favorite_stocks">Favorite Stocks</string>
    <string name="amount_in">Amount In %s</string>
    <string name="results_will_appear_here">Amount In GH₵</string>
    <string name="simple_converter">Simple Converter</string>
    <string name="amount_results">GH₵ %s</string>
    <string name="home_currency_template">%s%d=%s%s</string>
    <string name="day_volume">VOL %d</string>
    <string name="price_template">%s%s</string>
    <string name="click_to_add_stocks">Click to add stocks to the home screen</string>
</resources>