<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    tools:ignore="rtlHardCoded">

    <LinearLayout
        android:id="@+id/app_icon_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon"
            android:src="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/tv_job_details"
            fontPath="fonts/roboto-light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/preparing_zealous_notice"
            android:textColor="@color/white"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal">

        <TextView
            android:id="@+id/app_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/default_gap"
            android:textColor="@color/white"
            tools:text="1.22.3" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/default_gap"
            android:text="@string/app_name"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>
