<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_light">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1.0">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:padding="@dimen/default_gap">

                <TableRow>

                    <TextView
                        android:id="@+id/title_today"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        tools:text="Today, 19 Jav" />
                </TableRow>

                <TableRow>

                    <android.support.v4.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/default_gap"
                        android:layout_marginBottom="@dimen/default_gap" />
                </TableRow>

                <TableRow>

                    <Spinner
                        android:id="@+id/sp_rate_type"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:entries="@array/interest_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
                </TableRow>

                <TableRow>

                    <android.support.v4.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/default_gap"
                        android:layout_marginBottom="@dimen/default_gap" />
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/et_input"
                        android:layout_marginRight="@dimen/default_gap"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:hint="@string/principal"
                        android:inputType="numberDecimal"
                        android:maxLength="12" />

                    <EditText
                        android:id="@+id/et_rate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_gap"
                        android:gravity="center"
                        android:hint="@string/rate_percent"
                        android:inputType="numberDecimal"
                        android:maxLength="5" />
                </TableRow>

                <TableRow>

                    <android.support.v4.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/default_gap"
                        android:layout_marginBottom="@dimen/default_gap" />
                </TableRow>

                <TableRow android:id="@+id/tr_tresury_bill_days">

                    <EditText
                        android:id="@+id/et_duration"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:hint="@string/tv_duration_label"
                        android:inputType="number"
                        android:maxLength="5" />

                    <Spinner
                        android:id="@+id/sp_days_month_year"
                        android:layout_weight="1.0"
                        android:entries="@array/duration_types"
                        android:padding="@dimen/default_gap" />
                </TableRow>

                <TableRow>

                    <android.support.v4.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/default_gap"
                        android:layout_marginBottom="@dimen/default_gap" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_interest"
                        android:layout_weight="1.0"
                        android:gravity="start"
                        android:padding="@dimen/default_gap"
                        android:text="@string/interest"
                        android:textSize="16.0sp" />

                    <TextView
                        android:id="@+id/tv_amount"
                        android:layout_weight="1.0"
                        android:gravity="start"
                        android:padding="@dimen/default_gap"
                        android:text="@string/amount"
                        android:textSize="16.0sp" />
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:gravity="center"
            android:paddingTop="@dimen/default_gap"
            android:text="@string/your_bank_s_terms_and_conditions_might_affect_this_value"
            android:textColor="#ffff0000" />
    </LinearLayout>
</RelativeLayout>
