<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/et_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/name"
            android:inputType="text" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/budget"
                android:inputType="numberDecimal" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/default_gap"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/sp_budget_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/duration_types" />
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gap" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gap" />


        <!-- todo: update the category in the button text with the value in et_name-->
        <Button
            android:id="@+id/bt_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_violet"
            android:text="@string/add"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>